compiler/testData/diagnostics/tests/generics/tpAsReified/ClassDereference.fir.kt

fun <T: Any> dereferenceClass(): Any =
        <!TYPE_PARAMETER_AS_REIFIED!><!TYPE_PARAMETER_IS_NOT_AN_EXPRESSION!>T<!>::class<!>
